# cutqc2

./: .buildinfo  .gitignore  .pre-commit-config.yaml  Makefile  README.md  compute_snap.pickle  cut_and_eval_example.py  cut_and_eval_example.slurm  environment.yml  explaining_example.md  genindex.html  index.html  installation.html  modules.sh  objects.inv  py-modindex.html  pyproject.toml  readme.md  reconstruction_example.py  requirements.txt  search.html  searchindex.js  single_node_cpu_load_example.py  single_node_full_example.py
.github/workflows/: docs.yml  test_pinned_deps.yml  test_unpinned_deps.yml
Slurm/: reconstruction_example.slurm
_modules/: index.html
_modules/cutqc2/: qiskit_to_cudaq.html
_modules/cutqc2/core/: cut_circuit.html  dag.html  dynamic_definition.html  utils.html
_modules/cutqc2/cupy/: simple.html
_modules/cutqc2/io/: h5.html
_sources/: installation.md.txt
_sources/src/: cutqc2.core.rst.txt  cutqc2.cupy.rst.txt  cutqc2.cupy.simple.rst.txt  cutqc2.io.rst.txt  cutqc2.legacy.rst.txt  cutqc2.rst.txt  modules.rst.txt
cutqc/: __init__.py  abstract_graph_contractor.py  cutqc_model.py  cutter.py  distributed_graph_contraction.py  distributed_helper.py  dynamic_definition.py  evaluator.py  graph_contraction.py  helper_fun.py  main.py  post_process_helper.py  reconstructor.py
cutqc/helper_functions/: __init__.py  benchmarks.py  metrics.py  non_ibmq_functions.py  random_benchmark.py  schedule.py
cutqc/helper_functions/qcg/BernsteinVazirani/: bernstein_vazirani.py
cutqc/helper_functions/qcg/Dynamics/: quantum_dynamics.py
cutqc/helper_functions/qcg/QAOA/: hw_efficient_ansatz.py
cutqc/helper_functions/qcg/QFT/: qft_circ.py
cutqc/helper_functions/qcg/QWalk/: quantum_walk.py
cutqc/helper_functions/qcg/Supremacy/: ABCD_layer_generation.py  Qgrid_Sycamore.py  Qgrid_original.py  cz_layer_generation.py
cutqc/helper_functions/qcg/VQE/: uccsd_ansatz.py
cutqc/helper_functions/qcg/utils/: testhwea.py
cutqc_runtime/: dynamic_definition.py  graph_contraction.py  main.py
docs/source/: conf.py  index.rst
examples/: canonical_example.py  dynamic_definition.py  tutorial.py
src/: cutqc2.core.html  cutqc2.cupy.html  cutqc2.cupy.simple.html  cutqc2.html  cutqc2.io.html  cutqc2.legacy.html  modules.html
src/cudaqut/: qiskit_to_cudaq.py
src/cutqc2/: __init__.py
src/cutqc2/core/: compute_graph.py  cut_circuit.py  dag.py  dynamic_definition.py  optim.py  utils.py
src/cutqc2/cutqc/: example.py
src/cutqc2/io/: h5.py
tests/: conftest.py  test_cudaq.py  test_cupy.py  test_cut.py  test_cut_circuit.py  test_cut_save.py  test_cut_verify.py  test_dag.py  test_distribute.py  test_dynamic_definition.py  test_env.py  test_large_circuit.py  test_merge_prob_vector.py  test_misc.py  test_qiskit_to_cudaq.py  test_reconstruction.py  test_subcircuit_combinations.py
(+24 files in other folders)
