[project]
name = "cudaqut"
version = "0.0.1"
description = "CutQC on CudaQ"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "numpy",
    "qiskit==1.2",
    "matplotlib",
    "pydot",
    "scipy",
    "tqdm",
    "pylatexenc",
    "scikit-learn",
    "tensorflow",
    "networkx",
    "gurobipy<12",
    "psutil",
    "qiskit-aer"
]

[project.optional-dependencies]
dev = [
    "pytest>6"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-sv"